# JuicyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Game.h  Node.h  ResourceManager.h
projects/Example/: CMakeLists.txt  Example.cpp
src/: Camera.h  Engine.cpp  Engine.h  Game.cpp  Game.h  InputEvents.h  InputManager.cpp  InputManager.h  Logging.cpp  Logging.h  Node.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h  Resource.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  Scripting.cpp  Scripting.h  ScriptingManager.cpp  ScriptingManager.h  Serialization.cpp  Serialization.h  Sprite.cpp  VertexLayouts.cpp  VertexLayouts.h  WindowManager.cpp  WindowManager.h
src/Components/: Component.h  ComponentFactory.h  LensComponent.h  RenderComponent.h  ScriptedComponent.cpp  ScriptedComponent.h  SerializationComponent.h  TransformComponent.h
src/Nodes/: Node.h
src/Systems/: RenderSystem.cpp  RenderSystem.h  ScriptedSystem.cpp  ScriptedSystem.h  System.h
src/Utils/: ECS.h  SparseSet.h
tmp/: Camera.cpp  Node.cpp  ResourceManager.cpp  ResourceManager.h  Sprite.h
